--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Baby-Listious</string>
+
+    <string name="action_settings">Settings</string>
+
+
 </resources>
